# AuraVT

./: .gitignore  AppBootstrap.cs  AuraCore.shader  AuraToon.shader  AvatarConfig.cs  AvatarLoadProgress.uxml  AvatarLoadProgressUI.cs  AvatarLoader.cs  CMakeLists.txt  LICENSE  LilToonRemapper.cs  README.md  WindowManager.cs  build.yml  export_presets.cfg  package.json  project.godot
.github/: LICENSE.md  SECURITY.md
.github/workflows/: SECURITY.md  build.yml
NativePlugins/Windows/TransparentWindow/: dllmain.cpp
Tools/: extract_model.py
UnityProject/Assets/AuraVT/Core/: AvatarInstance.cs  AvatarLoader.cs  AvatarManager.cs  DragDropHandler.cs  FaceTrackingConfig.cs  TransparentWindow.cs
UnityProject/Assets/AuraVT/Core/FaceTracking/: BlendshapeDriver.cs  BuiltInFaceTracker.cs  FaceLandmarkInferencer.cs  FaceTrackingConfig.cs  IdleAnimationController.cs  LandmarkToFaceData.cs  OSCReceiver.cs  OpenSeeFaceReceiver.cs  (+1 more)
UnityProject/Assets/AuraVT/Editor/: UnityPackageExtractor.cs  VRCPrefabStripper.cs  VRCShaderMapper.cs  VRChatImporter.cs  VRChatImporterWindow.cs
UnityProject/Assets/AuraVT/Shaders/: PoiyomiRemapper.cs  ShaderDetector.cs  ShaderRemapper.cs
UnityProject/Assets/AuraVT/UI/: AvatarLoadProgress.uss
assets/: README.md
scenes/: main.tscn
scripts/avatar/: avatar_controller.gd  avatar_manager.gd
scripts/core/: globals.gd  main.gd  settings_manager.gd
scripts/ui/: drop_overlay.gd  settings_panel.gd  status_bar.gd
scripts/window/: window_controller.gd
src/: main.js  preload.js
src/renderer/: app.js  index.html  styles.css
